[tool.poetry]
name = "trust ai collection"
version = "0.1.0"
description = ""
authors = ["Ivan Kavalerov <ivan@kavalerov.net>"]

[tool.poetry.dependencies]
python = "^3.8"
gradio = "^3.14.0"
transformers = "^4.25.1"
sentence-transformers = "^2.2.2"
notebook = "^6.5.2"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
